# fracture

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: coding.rs  common.rs  conf.rs  handler.rs  lib.rs  messages.rs  msg.rs  serializeation.rs  sock_readable.rs
api/src/types/: messages.rs
api/src/utils/: ipencoding.rs  mod.rs
client/: Cargo.toml
client/src/: client.rs  conf.rs  main.rs  types.rs
client/src/client/: mod.rs
client/src/handlers/: imports.rs  mod.rs
client/src/handlers/modules/: test_handler.rs
fracture/client/: Cargo.toml
fracture/client/src/: args.rs  conf.rs  main.rs  main_task.rs  mpscwatcher.rs  types.rs
fracture/client/src/client/: mod.rs
fracture/client/src/handlers/: imports.rs  mod.rs
fracture/client/src/handlers/modules/: incoming_chat.rs  mod.rs  server_info_update.rs  test_handler.rs
fracture/client/src/ui/: mod.rs  style.rs  types.rs
fracture/config/: Cargo.toml
fracture/config/src/: client.rs  lib.rs  server.rs
fracture/core/: Cargo.toml
fracture/core/src/: handler.rs  lib.rs  msg.rs  serializeation.rs  sock_readable.rs
fracture/core/src/utils/: ipencoding.rs
fracture/server/: Cargo.toml
fracture/server/src/: argparser.rs  args.rs  conf.rs  main.rs
fracture/server/src/handlers/: imports.rs  mod.rs
fracture/server/src/handlers/modules/: impl_msg_all.rs  incoming_chat.rs  mod.rs  test_handler.rs  user_info.rs
fracture/server/src/interface/: core.rs  handler.rs  mod.rs
server/: Cargo.toml
server/src/: client_handler.rs  client_interface.rs  client_tracker.rs  conf.rs  main.rs  old_main.rs  types.rs
server/src/handlers/: imports.rs  mod.rs
server/src/handlers/modules/: mod.rs  test_handler.rs
server/src/interface/: core.rs  handler.rs
