# [package]
# name = "dirty-socks"
# version = "0.1.0"
# edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["server", "client", "api"]

# [dependencies]

# [dependencies]
# serde = { version = "1.0.131", features = ["derive"] }
# rmp-serde = "1.0.0-beta.2"