# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["fracture/server", "fracture/client", "fracture/core", "fracture/config"]

[profile.dev-opt]
inherits = "dev"
opt-level = 2


[profile.opt100]
inherits = "release"
codegen-units = 1 # this is similar, if not better than lto = fat, because i guess it means no linking?