[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "io-util", "signal", "rt"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
mini-redis = "0.4"
bytes = "1"
parking_lot = "0.11.2"
queues = "1.1.0"