[package]
name = "api"
version = "2.0.0-alpha"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "io-util", "signal", "rt", "net", "time"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
bytes = "1"
parking_lot = "0.11.2"
queues = "1.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
async-trait = "0.1"