[package]
name = "fracture-server"
version = "3.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fracture-config = { path = "../config" }
fracture-core = { path = "../core" }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "signal", "rt", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
bincode = "1.3.3"
bytes = "1"
parking_lot = "0.11.2"
queues = "1.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
clap = "2.34.0"
